...
            </objects>
            <point key="canvasLocation" x="1553.6231884057972" y="-673.66071428571422"/>
        </scene>
        <!--Currency-->
        <scene sceneID="wg7-f3-ORb">
            <objects>
                <viewController title="Currency" id="8rJ-Kc-sve" customClass="CurrencyViewController" customModule="BankApp" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="QS5-Rx-YEW">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="dollar" translatesAutoresizingMaskIntoConstraints="NO" id="1av-op-yBf">
                                <rect key="frame" x="16" y="352" width="75" height="43"/>
...
            <objects>
                <viewController id="8CD-GV-JSJ" customClass="LoginViewController" customModule="BankApp" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="w0r-gs-ESl">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter login" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="SrZ-Wh-ob4">
                                <rect key="frame" x="32" y="316" width="350" height="34"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter password" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="AZH-YL-3gx">
                                <rect key="frame" x="32" y="369" width="350" height="34"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ATb-1W-b9t">
...
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3HL-Ou-YXs">
                                <rect key="frame" x="32" y="440" width="350" height="39"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <color key="backgroundColor" red="0.060154087840000002" green="0.41099607939999999" blue="0.75380653139999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <state key="normal">
                                    <attributedString key="attributedTitle">
                                        <fragment content="Enter">
                                            <attributes>
                                                <color key="NSColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <font key="NSFont" size="24" name="AvenirNext-Regular"/>
                                            </attributes>
                                        </fragment>
                                    </attributedString>
...
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                            </imageView>
                        </subviews>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <viewLayoutGuide key="safeArea" id="qwX-gk-KxR"/>
                    </view>
                    <navigationItem key="navigationItem" title="Login" id="GT3-O5-jnK"/>
                    <connections>
                        <outlet property="enterButton" destination="3HL-Ou-YXs" id="jN6-BR-g2B"/>
                        <outlet property="loginTextField" destination="SrZ-Wh-ob4" id="Bky-eH-Rvd"/>
                        <outlet property="passwordTextField" destination="AZH-YL-3gx" id="yBA-a3-LD2"/>
                        <segue destination="49e-Tb-3d3" kind="show" identifier="showMainMenu" id="bFU-WJ-lce"/>
                    </connections>
...
